# web-AI

./: README.md  app.py  dockerfile  pyproject.toml  requirements.txt
templates/: index.html
