[project]
name = "docker-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "jinja2>=3.1.6",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "python-multipart>=0.0.24",
    "ultralytics>=8.4.36",
    "uvicorn>=0.44.0",
]
